# expense

./: .env.example  .env.prod.example  DEPLOY.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  ecs-task-definition.json  expense.db  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_ec2.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  server.py
app/database/: base.py  models.py  session.py
app/prompts/: prompts.py
app/repositories/: budget_repository.py  category_repository.py  transaction_repository.py
app/resources/: resources.py
app/schemas/: schemas.py
app/services/: analytics_service.py  budget_service.py  category_service.py  transaction_service.py
app/tools/: analytics_tools.py  budget_tools.py  category_tools.py  transaction_tools.py
check/: DEPLOY.md
tests/: conftest.py  test_analytics.py  test_budgets.py  test_categories.py  test_transactions.py
